--- a/index.html
+++ b/index.html
@@ -759,16 +759,28 @@
     }
 
     function unlockPro() {
-      const code = document.getElementById('unlockCode').value.trim();
-      // Simple code system - in production this would verify against a server
-      if (code && code.length >= 6) {
-        localStorage.setItem('quoteGeniusPro', 'true');
-        closeProModal();
-        checkPro();
-        alert('Pro unlocked! Thanks for supporting Quote Genius.');
-      } else {
-        alert('Invalid code. Pay $5 to get your unlock code.');
-      }
+      const code = document.getElementById('unlockCode').value.trim().toUpperCase();
+      
+      fetch('https://quote-genius-server.onrender.com/validate', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ code: code })
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.valid) {
+          localStorage.setItem('quoteGeniusPro', 'true');
+          localStorage.setItem('quoteGeniusCode', code);
+          closeProModal();
+          checkPro();
+          alert('Pro unlocked! Thanks for supporting Quote Genius.');
+        } else {
+          alert('Invalid code. Make sure you entered it correctly.');
+        }
+      })
+      .catch(err => {
+        alert('Could not validate code. Try again later.');
+      });
     }
 
     function saveProData() {
