--- a/success.html
+++ b/success.html
@@ -153,7 +153,7 @@
 
     if (sessionId) {
       // Fetch code from our server
-      fetch('https://1789-2607-fb90-bf1a-5f0-5ad4-77b2-24c9-ffe1.ngrok-free.app/get-code?session=' + sessionId)
+      fetch('https://quote-genius-server.onrender.com/get-code?session=' + sessionId)
         .then(res => res.json())
         .then(data => {
           if (data.code) {
