--- a/success.html
+++ b/success.html
@@ -154,8 +154,8 @@
     if (sessionId) {
       document.getElementById('code').textContent = 'Looking up code...';
       
-      // Use session ID as code (it's already unique)
-      const code = sessionId.toUpperCase().replace(/[^A-Z0-9]/g, '').substring(0, 8);
+      // Generate code the same way the server does
+      let code = sessionId.replace('cs_test_', '').replace('cs_live_', '').substring(0, 8).toUpperCase();
       
       // First wake up server
       fetch('https://quote-genius-server.onrender.com/admin/codes')
@@ -173,7 +173,7 @@
                   attempts++;
                   setTimeout(tryFetch, 1500);
                 } else {
-                  // Use session ID as code - but map it in server first
+                  // Use the generated code
                   document.getElementById('code').textContent = code;
                 }
               })
