--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <div class="card" style="max-width: 400px; margin: 1rem;">
           <div class="card-title">Unlock Pro</div>
           <p style="font-size: 0.9rem; color: var(--text-muted); margin-bottom: 1rem;">
-            Pay $5/month via Venmo/CashApp to unlock Pro features:
+            Pay $5/month to unlock Pro features:
           </p>
           <ul style="font-size: 0.85rem; color: var(--text-muted); margin-bottom: 1rem; padding-left: 1.2rem;">
             <li>Unlimited line items</li>
@@ -452,9 +452,11 @@
             <li>PDF export</li>
             <li>Remove "Created with Quote Genius"</li>
           </ul>
-          <p style="font-size: 0.85rem; margin-bottom: 1rem;">
-            <strong>Venmo:</strong> @Trent-Brasel<br>
-            <strong>CashApp:</strong> $trentbrasel
+          <a href="https://buy.stripe.com/28E9AT7qB7RT4UX8mc8EM01" target="_blank" class="btn btn-primary" style="width: 100%; text-decoration: none; display: block; text-align: center; margin-bottom: 1rem;">
+            Pay $5/mo with Stripe
+          </a>
+          <p style="font-size: 0.8rem; color: var(--text-muted); margin-bottom: 1rem; text-align: center;">
+            You'll get a code after payment. Enter it below.
           </p>
           <label>Enter your unlock code:</label>
           <input type="text" id="unlockCode" placeholder="Code">
