--- a/index.html
+++ b/index.html
@@ -374,8 +374,15 @@
     <div class="builder-view" id="builder">
       <header>
         <div class="logo">⚡ Quote Genius</div>
-        <p class="tagline">Instant quotes. No signup. Send to customers in seconds.</p>
+        <p class="tagline">Instant quotes for service businesses. Free • Pro $5/mo</p>
       </header>
+
+      <!-- Pro Banner -->
+      <div style="background: linear-gradient(135deg, #ff6b35 0%, #ff8555 100%); border-radius: 12px; padding: 1rem; margin-bottom: 1.5rem; text-align: center;">
+        <p style="font-weight: 600; margin-bottom: 0.5rem;">🔥 Get Pro for just $5/month</p>
+        <p style="font-size: 0.85rem; opacity: 0.9; margin-bottom: 0.75rem;">Unlimited line items • Custom logo • PDF export • No branding</p>
+        <button class="btn" onclick="showProModal()" style="background: white; color: #ff6b35; width: 100%; font-weight: 600;">Upgrade to Pro</button>
+      </div>
 
       <div class="card">
         <div class="card-title">Your Business</div>
@@ -394,7 +401,7 @@
       </div>
 
       <div class="card">
-        <div class="card-title">Services</div>
+        <div class="card-title">Services <span style="color: var(--accent); font-size: 0.75rem;">(Free: 5 max • Pro: unlimited)</span></div>
         <div class="line-items" id="lineItems">
           <div class="line-item">
             <input type="text" placeholder="Service description" class="service-desc">
@@ -424,16 +431,17 @@
       </div>
 
       <!-- Pro Section -->
-      <div class="card" style="margin-top: 2rem; border-color: var(--accent);">
-        <div class="card-title" style="color: var(--accent);">⚡ Go Pro</div>
+      <div class="card" style="margin-top: 2rem; border: 2px solid var(--accent); background: linear-gradient(135deg, rgba(255,107,53,0.1) 0%, rgba(255,133,85,0.05) 100%);">
+        <div class="card-title" style="color: var(--accent); font-size: 1rem; font-weight: 700;">⚡ Go Pro — $5/month</div>
         <p style="font-size: 0.9rem; color: var(--text-muted); margin-bottom: 1rem;">
-          Unlock unlimited line items, custom logo, PDF export, and remove branding.
+          <strong>Free version:</strong> 5 services max, "Created with Quote Genius" on quotes<br>
+          <strong>Pro:</strong> Unlimited line items, custom logo, PDF export, remove branding
         </p>
         <div id="proLocked">
-          <button class="btn btn-primary" onclick="showProModal()" style="background: var(--accent);">Unlock Pro — $5/mo</button>
+          <button class="btn btn-primary" onclick="showProModal()" style="background: var(--accent); width: 100%;">Unlock Pro — $5/mo</button>
         </div>
         <div id="proUnlocked" style="display: none;">
-          <p style="color: var(--success); font-size: 0.9rem;">✓ Pro unlocked</p>
+          <p style="color: var(--success); font-size: 0.9rem;">✓ Pro active</p>
           <label style="margin-top: 1rem;">Custom Logo URL</label>
           <input type="text" id="customLogo" placeholder="https://your-site.com/logo.png" onchange="saveProData()">
         </div>
@@ -518,7 +526,8 @@
       const itemCount = document.querySelectorAll('.line-item').length;
       
       if (!isPro && itemCount >= 5) {
-        alert('Free version supports up to 5 services. Go Pro for unlimited!');
+        alert('Free version limited to 5 services. Upgrade to Pro for unlimited!');
+        showProModal();
         return;
       }
       
