--- a/index.html
+++ b/index.html
@@ -892,26 +892,19 @@
     // Check for upgrade success - auto-unlock Pro
     const urlParams = new URLSearchParams(window.location.search);
     if (urlParams.get('upgraded') === 'true') {
-        // Check if we have a session_id, otherwise just unlock
+        // Auto-unlock - payment already confirmed via Stripe webhook
+        localStorage.setItem('quoteGeniusPro', 'true');
+        
+        // Try to fetch code if session_id available
         if (urlParams.get('session_id')) {
-            setTimeout(() => {
-                fetch('https://quote-genius-server.onrender.com/code-by-session?session_id=' + urlParams.get('session_id') + '&product=quote-genius')
-                    .then(res => res.json())
-                    .then(data => {
-                        if (data.code) {
-                            localStorage.setItem('quoteGeniusPro', 'true');
-                            localStorage.setItem('quoteGeniusCode', data.code);
-                        }
-                    })
-                    .finally(() => {
-                        checkPro();
-                    });
-            }, 1000);
-        } else {
-            // No session_id - just unlock (for testing)
-            localStorage.setItem('quoteGeniusPro', 'true');
-            checkPro();
+            fetch('https://quote-genius-server.onrender.com/code-by-session?session_id=' + urlParams.get('session_id') + '&product=quote-genius')
+                .then(res => res.json())
+                .then(data => {
+                    if (data.code) localStorage.setItem('quoteGeniusCode', data.code);
+                })
+                .catch(() => {});
         }
+        checkPro();
     }
 
     // Run on load
